--- a/data_preprocessing/prepare_data.ipynb
+++ b/data_preprocessing/prepare_data.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1252,16 +1252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f70dd4114a8>"
+       "<matplotlib.image.AxesImage at 0x7f34f60a6da0>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
        "21954"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pa = \"/home/guest/pytorch-car-pix2pix/data_preprocessing/car/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1362,18 +1371,187 @@
       "Load image 3600\n",
       "Load image 3700\n",
       "Load image 3800\n",
-      "Load image 3900\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-131-1347bb04e997>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mii\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_img'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mii\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mii\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msave_path2\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".jpg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mii\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Load image\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Load image 3900\n",
+      "Load image 4000\n",
+      "Load image 4100\n",
+      "Load image 4200\n",
+      "Load image 4300\n",
+      "Load image 4400\n",
+      "Load image 4500\n",
+      "Load image 4600\n",
+      "Load image 4700\n",
+      "Load image 4800\n",
+      "Load image 4900\n",
+      "Load image 5000\n",
+      "Load image 5100\n",
+      "Load image 5200\n",
+      "Load image 5300\n",
+      "Load image 5400\n",
+      "Load image 5500\n",
+      "Load image 5600\n",
+      "Load image 5700\n",
+      "Load image 5800\n",
+      "Load image 5900\n",
+      "Load image 6000\n",
+      "Load image 6100\n",
+      "Load image 6200\n",
+      "Load image 6300\n",
+      "Load image 6400\n",
+      "Load image 6500\n",
+      "Load image 6600\n",
+      "Load image 6700\n",
+      "Load image 6800\n",
+      "Load image 6900\n",
+      "Load image 7000\n",
+      "Load image 7100\n",
+      "Load image 7200\n",
+      "Load image 7300\n",
+      "Load image 7400\n",
+      "Load image 7500\n",
+      "Load image 7600\n",
+      "Load image 7700\n",
+      "Load image 7800\n",
+      "Load image 7900\n",
+      "Load image 8000\n",
+      "Load image 8100\n",
+      "Load image 8200\n",
+      "Load image 8300\n",
+      "Load image 8400\n",
+      "Load image 8500\n",
+      "Load image 8600\n",
+      "Load image 8700\n",
+      "Load image 8800\n",
+      "Load image 8900\n",
+      "Load image 9000\n",
+      "Load image 9100\n",
+      "Load image 9200\n",
+      "Load image 9300\n",
+      "Load image 9400\n",
+      "Load image 9500\n",
+      "Load image 9600\n",
+      "Load image 9700\n",
+      "Load image 9800\n",
+      "Load image 9900\n",
+      "Load image 10000\n",
+      "Load image 10100\n",
+      "Load image 10200\n",
+      "Load image 10300\n",
+      "Load image 10400\n",
+      "Load image 10500\n",
+      "Load image 10600\n",
+      "Load image 10700\n",
+      "Load image 10800\n",
+      "Load image 10900\n",
+      "Load image 11000\n",
+      "Load image 11100\n",
+      "Load image 11200\n",
+      "Load image 11300\n",
+      "Load image 11400\n",
+      "Load image 11500\n",
+      "Load image 11600\n",
+      "Load image 11700\n",
+      "Load image 11800\n",
+      "Load image 11900\n",
+      "Load image 12000\n",
+      "Load image 12100\n",
+      "Load image 12200\n",
+      "Load image 12300\n",
+      "Load image 12400\n",
+      "Load image 12500\n",
+      "Load image 12600\n",
+      "Load image 12700\n",
+      "Load image 12800\n",
+      "Load image 12900\n",
+      "Load image 13000\n",
+      "Load image 13100\n",
+      "Load image 13200\n",
+      "Load image 13300\n",
+      "Load image 13400\n",
+      "Load image 13500\n",
+      "Load image 13600\n",
+      "Load image 13700\n",
+      "Load image 13800\n",
+      "Load image 13900\n",
+      "Load image 14000\n",
+      "Load image 14100\n",
+      "Load image 14200\n",
+      "Load image 14300\n",
+      "Load image 14400\n",
+      "Load image 14500\n",
+      "Load image 14600\n",
+      "Load image 14700\n",
+      "Load image 14800\n",
+      "Load image 14900\n",
+      "Load image 15000\n",
+      "Load image 15100\n",
+      "Load image 15200\n",
+      "Load image 15300\n",
+      "Load image 15400\n",
+      "Load image 15500\n",
+      "Load image 15600\n",
+      "Load image 15700\n",
+      "Load image 15800\n",
+      "Load image 15900\n",
+      "Load image 16000\n",
+      "Load image 16100\n",
+      "Load image 16200\n",
+      "Load image 16300\n",
+      "Load image 16400\n",
+      "Load image 16500\n",
+      "Load image 16600\n",
+      "Load image 16700\n",
+      "Load image 16800\n",
+      "Load image 16900\n",
+      "Load image 17000\n",
+      "Load image 17100\n",
+      "Load image 17200\n",
+      "Load image 17300\n",
+      "Load image 17400\n",
+      "Load image 17500\n",
+      "Load image 17600\n",
+      "Load image 17700\n",
+      "Load image 17800\n",
+      "Load image 17900\n",
+      "Load image 18000\n",
+      "Load image 18100\n",
+      "Load image 18200\n",
+      "Load image 18300\n",
+      "Load image 18400\n",
+      "Load image 18500\n",
+      "Load image 18600\n",
+      "Load image 18700\n",
+      "Load image 18800\n",
+      "Load image 18900\n",
+      "Load image 19000\n",
+      "Load image 19100\n",
+      "Load image 19200\n",
+      "Load image 19300\n",
+      "Load image 19400\n",
+      "Load image 19500\n",
+      "Load image 19600\n",
+      "Load image 19700\n",
+      "Load image 19800\n",
+      "Load image 19900\n",
+      "Load image 20000\n",
+      "Load image 20100\n",
+      "Load image 20200\n",
+      "Load image 20300\n",
+      "Load image 20400\n",
+      "Load image 20500\n",
+      "Load image 20600\n",
+      "Load image 20700\n",
+      "Load image 20800\n",
+      "Load image 20900\n",
+      "Load image 21000\n",
+      "Load image 21100\n",
+      "Load image 21200\n",
+      "Load image 21300\n",
+      "Load image 21400\n",
+      "Load image 21500\n",
+      "Load image 21600\n",
+      "Load image 21700\n",
+      "Load image 21800\n",
+      "Load image 21900\n"
      ]
     }
    ],
@@ -1381,8 +1559,13 @@
     "for i in range(len(Ffile['train_img'])):\n",
     "    name = format(i, '05d')\n",
     "    ii = Ffile['train_img'][i]\n",
-    "    ii = ii[0:256, 0:256]\n",
-    "    cv2.imwrite(save_path2+name+\".jpg\", ii)\n",
+    "    #ii = ii[0:256, 0:256]\n",
+    "    if i < 1000:\n",
+    "        cv2.imwrite(pa+\"val/\"+name+\".jpg\", ii)\n",
+    "    elif i < 1100:\n",
+    "        cv2.imwrite(pa+\"test/\"+name+\".jpg\", ii)\n",
+    "    else:\n",
+    "        cv2.imwrite(pa+\"train/\"+name+\".jpg\", ii)\n",
     "    if i%100==0:\n",
     "        print(\"Load image\",i)"
    ]
